--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,8 +3,11 @@
 * {
     list-style: none !important;
     text-decoration: none !important;
+    -webkit-box-sizing: border-box !important;
     box-sizing: border-box !important;
     font-family: "Work Sans", sans-serif !important;
+    -webkit-transition: all 200ms linear !important;
+    -o-transition: all 200ms linear !important;
     transition: all 200ms linear !important;
 }
 
@@ -31,8 +34,8 @@
     --timeline-ball: #009DFF;
     --accord-color: #031227;
     --liner-gradient: linear-gradient(96.64deg, #FD9B2B 13.58%, #F14F09 86.99%);
-    --pink-color:#F7608C;
-    --orange-color:#F8AC58;
+    --pink-color: #F7608C;
+    --orange-color: #F8AC58;
 
     --fs-14: 14px;
     --fs-16: 16px;
@@ -335,7 +338,11 @@
 }
 
 .submit-btn:hover {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
     transform: scale(1.1);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(86.99%, #FD9B2B), color-stop(13.58%, #FD9B2B));
+    background: -o-linear-gradient(top, #FD9B2B 86.99%, #FD9B2B 13.58%);
     background: linear-gradient(to bottom, #FD9B2B 86.99%, #FD9B2B 13.58%);
 }
 
@@ -370,6 +377,8 @@
 }
 
 .premium-card:hover {
+    -webkit-transform: scale(0.9);
+    -ms-transform: scale(0.9);
     transform: scale(0.9);
 }
 
@@ -407,6 +416,8 @@
     top: 0;
     right: 0;
     z-index: 3;
+    -webkit-transform: translate(0px, 30%);
+    -ms-transform: translate(0px, 30%);
     transform: translate(0px, 30%);
 }
 
@@ -509,6 +520,8 @@
 
 .right {
     right: 0;
+    -webkit-transform: translate(-3px, -50%) !important;
+    -ms-transform: translate(-3px, -50%) !important;
     transform: translate(-3px, -50%) !important;
 
 }
@@ -556,8 +569,12 @@ sup {
     background: var(--liner-gradient);
     border-radius: 50%;
     position: absolute;
+    -webkit-transform: translate(3px, -50%);
+    -ms-transform: translate(3px, -50%);
     transform: translate(3px, -50%);
     top: 50%;
+    -webkit-transition: none !important;
+    -o-transition: none !important;
     transition: none !important;
 }
 
@@ -590,6 +607,8 @@ sup {
     background-color: var(--white-color);
     width: 0;
     height: 2px;
+    -webkit-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
     transition: all 200ms linear;
 
 }
@@ -696,10 +715,14 @@ sup {
     position: absolute;
     bottom: 0;
     left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
     transform: translateX(-50%);
     height: 2px;
     /* background: var(--liner-gradient); */
     background-color: var(--black-color);
+    -webkit-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
     transition: all 200ms linear;
 }
 
@@ -724,8 +747,14 @@ sup {
     width: 87px;
     height: 87px;
     border-radius: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     background: var(--liner-gradient);
 }
@@ -734,10 +763,17 @@ sup {
     label[for="menuicon"] {
         width: 30px;
         height: 30px;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
         justify-content: space-between;
         position: absolute;
         right: 0;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
         z-index: 6;
 
@@ -751,8 +787,15 @@ sup {
     }
 
     .lg-screen {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
         justify-content: center;
         width: 100%;
         height: 100%;
@@ -764,13 +807,25 @@ sup {
     }
 
     .flex-prop {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
         justify-content: center;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
         flex-direction: column;
     }
 
     .flex-reverse {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
         flex-direction: column-reverse;
     }
 
@@ -783,6 +838,8 @@ sup {
     }
 
     .align-items-center-lg {
+        -webkit-box-align: center;
+        -ms-flex-align: center;
         align-items: center;
     }
 
@@ -840,6 +897,8 @@ sup {
     }
 
     .card-hover:hover .card {
+        -webkit-transform: translate(0px, -43px);
+        -ms-transform: translate(0px, -43px);
         transform: translate(0px, -43px);
     }
 
