--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -603,7 +603,8 @@ sup {
     content: "";
     position: absolute;
     bottom: 0;
-    right: 0;
+    left: 50%;
+    transform: translateX(-50%);
     background-color: var(--white-color);
     width: 0;
     height: 2px;
@@ -611,6 +612,36 @@ sup {
     -o-transition: all 200ms linear;
     transition: all 200ms linear;
 
+}
+
+.contact-blue-box {
+    top: -73px;
+    left: 10%;
+    position: absolute;
+}
+
+.pricing-cross {
+    position: absolute;
+    top: 17%;
+    right: 30%;
+}
+
+.module-cross {
+    position: absolute;
+    right: 5%;
+    top: 20%;
+}
+
+.feature-box {
+    left: 10%;
+    top: 75%;
+    position: absolute;
+}
+
+.features-cross {
+    position: absolute;
+    top: 3%;
+    right: 7%;
 }
 
 .footer-link:hover::before {
@@ -757,7 +788,9 @@ sup {
     transform: scale(1.1) !important;
 }
 
-
+.click-box {
+    cursor: pointer;
+}
 
 .w_h_87 {
     width: 87px;
@@ -816,7 +849,7 @@ sup {
         width: 100%;
         height: 100%;
         position: fixed;
-        background: var(--liner-gradient);
+        background: var(--white-color);
         top: 0;
         right: -100%;
         z-index: 5;
