--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -614,6 +614,23 @@ sup {
 
 }
 
+.loading-screen {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    z-index: 4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.loader-svg {
+    width: 70px;
+    height: 70px;
+}
+
 .contact-blue-box {
     top: -73px;
     left: 10%;
@@ -653,6 +670,8 @@ sup {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
+
 
 .underline {
     width: 100%;
@@ -777,7 +796,7 @@ sup {
     position: fixed;
     bottom: 1%;
     right: 1%;
-    display: flex;
+    display: none;
     align-items: center;
     justify-content: center;
     cursor: pointer;
