--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -994,3 +994,8 @@ sup {
         background: var(--liner-gradient);
     }
 }
+@media (max-width:576px) {
+    .sm-fs-14{
+        font-size: var(--fs-14);
+    }
+}
